// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.uses.sh given: [case1] set --quant N --push block when: [t0] setting 3 uses with push blocked then: outputs gnarly with granted count 1`] = `
"🐢 gnarly! thanks human!

🐚 git.commit.uses set
   ├─ granted: 3
   └─ push: blocked
"
`;

exports[`git.commit.uses.sh given: [case2] set --quant N --push allow when: [t0] setting 1 use with push allowed then: outputs radical 1`] = `
"🐢 radical! let's ride!

🐚 git.commit.uses set
   ├─ granted: 1
   └─ push: allowed
"
`;

exports[`git.commit.uses.sh given: [case3] set --quant 0 (revoke) when: [t0] revoking all uses then: outputs groovy break time with tip 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses set
   ├─ revoked
   └─ [2mtip: 'rhx git.commit.uses del' does the same[0m
"
`;

exports[`git.commit.uses.sh given: [case3b] set --quant 0 --push allow (push-only mode) when: [t0] push-only access granted then: outputs push only mode without tip 1`] = `
"🐢 sweet, let it ride

🐚 git.commit.uses set
   ├─ commits: 0
   └─ push: allowed
"
`;

exports[`git.commit.uses.sh given: [case3c] set --quant 0 without --push (defaults to block) when: [t0] revoke without explicit push flag then: defaults to block and shows revoked with tip 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses set
   ├─ revoked
   └─ [2mtip: 'rhx git.commit.uses del' does the same[0m
"
`;

exports[`git.commit.uses.sh given: [case3d] del command (revoke shortcut) when: [t0] del with quota present then: shows revoked without tip 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses del
   └─ revoked
"
`;

exports[`git.commit.uses.sh given: [case3d] del command (revoke shortcut) when: [t1] del without quota (idempotent) then: succeeds and shows revoked 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses del
   └─ revoked
"
`;

exports[`git.commit.uses.sh given: [case5] get shows remaining when: [t0] state exists with 2 uses then: outputs lets check the meter with remaining 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ meter
      ├─ left: 2
      └─ push: allowed
"
`;

exports[`git.commit.uses.sh given: [case6] get with 0 uses and push allow (push-only mode) when: [t0] state exists with 0 uses and push allow then: shows push allowed for push-only use case 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ meter
      ├─ left: 0
      └─ push: allowed
"
`;

exports[`git.commit.uses.sh given: [case7] get when no state file when: [t0] no .meter/git.commit.uses.jsonc exists then: shows no quota set 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ no quota set

ask your human to grant:
  $ git.commit.uses set --quant N --push allow|block
"
`;
